--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+package-lock.json
 
 # Runtime data
 pids
@@ -102,3 +103,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# CSS files
+css/
