--- a/package.json
+++ b/package.json
@@ -6,14 +6,32 @@
   "main": "gulpfile.js",
   "author": "m1hm",
   "scripts": {
-    "start": "gulp dev",
-    "build": "gulp build"
+    "editorconfig": "editorconfig-cli",
+    "stylelint": "stylelint 'source/less/**/*.less' --syntax less",
+    "test": "npm run editorconfig && npm run stylelint",
+    "build": "gulp build",
+    "start": "npm run build && gulp serve"
   },
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "@htmlacademy/editorconfig-cli": "^1.0.0",
+    "autoprefixer": "^9.7.4",
+    "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-csso": "^4.0.1",
+    "gulp-imagemin": "^7.0.0",
+    "gulp-less": "^4.0.1",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-posthtml": "^3.0.4",
+    "gulp-rename": "^2.0.0",
+    "gulp-svgstore": "^7.0.1",
+    "gulp-webp": "^4.0.1",
+    "posthtml-include": "^1.3.3",
+    "run-sequence": "^2.2.1",
+    "stylelint": "^13.0.0",
+    "stylelint-config-htmlacademy": "^0.1.4"
   },
-  "dependencies": {
-    "gulp-less": "^4.0.1"
-  }
+  "dependencies": {}
 }
