--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.0.0",
     "gulp-less": "^4.0.1",
     "gulp-plumber": "^1.2.1",
@@ -27,6 +28,7 @@
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^2.0.0",
     "gulp-svgstore": "^7.0.1",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-webp": "^4.0.1",
     "posthtml-include": "^1.3.3",
     "run-sequence": "^2.2.1",
